[gd_scene load_steps=15 format=2]

[ext_resource path="res://01_Cutscenes_EXPORT_ROTARY/Titlescreen_ROTARY_2.png" type="Texture" id=1]
[ext_resource path="res://00_Font_ROTARY/Inconstant-Height25.otf" type="DynamicFontData" id=2]
[ext_resource path="res://00_Font_ROTARY/Inconstant-Base100.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/UI_elements/UIButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://05_Totalizzatore/Icona_vasca.png" type="Texture" id=5]
[ext_resource path="res://05_Totalizzatore/Icona_acqua.png" type="Texture" id=6]
[ext_resource path="res://05_Totalizzatore/Icona_basket.png" type="Texture" id=7]
[ext_resource path="res://05_Totalizzatore/Icona_terra.png" type="Texture" id=8]
[ext_resource path="res://Scenes/FinalPoints.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 62
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 158
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 44
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 55
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 34
font_data = ExtResource( 3 )

[node name="FinalPoints" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1920, 1200 )
script = ExtResource( 9 )

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -706.0
margin_top = -384.0
margin_right = 706.0
margin_bottom = 384.0

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -654.0
margin_top = 55.0
margin_right = -20.0
margin_bottom = 331.0
color = Color( 0.72549, 0.823529, 0.862745, 1 )

[node name="ColorRect2" type="ColorRect" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 55.0
margin_right = 654.0
margin_bottom = 331.0
color = Color( 0.301961, 0.709804, 0.427451, 1 )

[node name="Titolo" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -374.0
margin_top = -339.0
margin_right = 374.0
margin_bottom = -273.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Punteggio totale"
align = 1
uppercase = true

[node name="Punteggio" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = -256.0
margin_right = 205.0
margin_bottom = -41.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="PastiRisparmiati" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.0
margin_top = -89.0
margin_right = 288.0
margin_bottom = 48.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Pasti risparmiati"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="Acqua" type="Control" parent="."]
margin_left = 306.0
margin_top = 655.0
margin_right = 939.0
margin_bottom = 931.0

[node name="AcquaIcon" type="TextureRect" parent="Acqua"]
margin_left = 186.0
margin_top = 35.0
margin_right = 236.0
margin_bottom = 75.0
rect_scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 6 )

[node name="AcquaValue" type="Label" parent="Acqua"]
margin_left = 286.0
margin_top = 34.0
margin_right = 517.0
margin_bottom = 92.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0l"
valign = 1
autowrap = true
uppercase = true

[node name="AcquaLabel" type="Label" parent="Acqua"]
margin_left = 92.0
margin_top = 115.0
margin_right = 508.0
margin_bottom = 152.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Acqua risparmiata"
align = 1
valign = 1
autowrap = true

[node name="ColorRect" type="ColorRect" parent="Acqua"]
margin_left = 36.0
margin_top = 168.0
margin_right = 589.0
margin_bottom = 172.0
color = Color( 0, 0, 0, 1 )

[node name="VascheIcon" type="TextureRect" parent="Acqua"]
margin_left = 99.0
margin_top = 190.0
margin_right = 149.0
margin_bottom = 230.0
rect_scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 5 )

[node name="VascheValue" type="Label" parent="Acqua"]
margin_left = 182.0
margin_top = 203.0
margin_right = 576.0
margin_bottom = 240.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "= 0 vasche da bagno"
valign = 1
autowrap = true

[node name="Terra" type="Control" parent="."]
margin_left = 981.0
margin_top = 655.0
margin_right = 1614.0
margin_bottom = 932.0

[node name="TerraIcon" type="TextureRect" parent="Terra"]
margin_left = 203.0
margin_top = 42.0
margin_right = 255.0
margin_bottom = 82.0
rect_scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 8 )

[node name="TerraValue" type="Label" parent="Terra"]
margin_left = 295.0
margin_top = 38.0
margin_right = 539.0
margin_bottom = 96.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0mÂ²"
valign = 1
autowrap = true

[node name="TerraLabel" type="Label" parent="Terra"]
margin_left = 107.0
margin_top = 114.0
margin_right = 523.0
margin_bottom = 151.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Terra risparmiata"
align = 1
valign = 1
autowrap = true

[node name="ColorRect" type="ColorRect" parent="Terra"]
margin_left = 36.0
margin_top = 168.0
margin_right = 589.0
margin_bottom = 172.0
color = Color( 0, 0, 0, 1 )

[node name="CampiIcon" type="TextureRect" parent="Terra"]
margin_left = 93.9999
margin_top = 185.0
margin_right = 144.0
margin_bottom = 230.0
rect_scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 7 )

[node name="CampiValue" type="Label" parent="Terra"]
margin_left = 176.0
margin_top = 201.0
margin_right = 601.0
margin_bottom = 238.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "= 0 campi da basket"
valign = 1
autowrap = true

[node name="UIButton" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.0
margin_top = 431.0
margin_right = 220.0
margin_bottom = 510.0
text = "CONTINUA"

[connection signal="button_pressed" from="UIButton" to="." method="next_scene"]
